<resources>
    <string name="app_name">Localization</string>
    <string name="app_title">Registration</string>

    <string name="app_text">Fill in this form to register as user</string>
    <string name="form_name">Full Name</string>
    <string name="form_email">Email Address</string>
    <string name="form_phone">Phone Number</string>
    <string name="form_pwd">Passwrod</string>
    <string name="form_check">I have read and agree the terms</string>

    <string name="btn_go">Submit</string>
    <string name="btn_set">Set Languange</string>
</resources>
